// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StructuredText dast including a http: link with target blank with default rules renders the document 1`] = `
<div>
  <p>This is <a target="_blank" rel="nofollow" href="http://example.com">text</a></p>
</div>
`;

exports[`StructuredText dast including a mailto: link with default rules renders the document 1`] = `
<div>
  <p><a href="mailto:test@tests.com">test@test.com</a></p>
</div>
`;

exports[`StructuredText dast including a new-line in a paragraph with default rules renders the document 1`] = `
<div>
  <p>Test Content<br>Test Content</p>
</div>
`;

exports[`StructuredText simple dast /2 with default rules renders the document 1`] = `
<div>
  <h1>This<br>is a<br>title!</h1><pre data-language="javascript"><code>function greetings() {
  console.log('Hi!');
}</code></pre>
</div>
`;

exports[`StructuredText simple dast with no links/blocks with custom rules renders the document 1`] = `
<div>
  <h2>That!!<br>is a!!<br>title!!!</h2><pre data-language="javascript"><code>function greetings() {
  console.log('Hi!');
}!!</code></pre>
</div>
`;

exports[`StructuredText simple dast with no links/blocks with default rules renders the document 1`] = `
<div>
  <h1>This<br>is a<br>title!</h1><pre data-language="javascript"><code>function greetings() {
  console.log('Hi!');
}</code></pre>
</div>
`;

exports[`StructuredText with links/blocks with default rules renders the document 1`] = `
<div>
  <h1>This is a<mark>title</mark><a href="/docs/how-to-code">How to code</a><a target="_blank" href="/docs/how-to-code">here!</a><em>Jane Doe</em></h1>
  <figure>
    <blockquote>Foo bar.</blockquote>
    <figcaption>Mark Smith</figcaption>
  </figure>
</div>
`;

exports[`StructuredText with no value renders null 1`] = `""`;
